deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-site
  namespace: default
  labels:
    app: test-site
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: test-site
  template:
    metadata:
      labels:
        app: test-site
    spec:
      containers:
        - name: test-site
          image: nginx:latest
          volumeMounts:
          - name: html
            mountPath: /usr/share/nginx
      volumes:
      - name: html
        emptyDir: {}
