service.yaml
---
apiVersion: v1 
kind: Service
metadata:
  name: test-site-service
  namespace: default
spec:
  selector:
    app: test-site
  ports:
  - name: http
    targetPort: 80
    port: 80
